[package]
    name = "mpu60x0"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    embedded-hal = "1.0.0"
    cortex-m = "0.7"
    cortex-m-rt = "0.7.5"
    stm32f4xx-hal = { version = "0.22.1", features = ["stm32f429"] }
    rtt-target = { version="0.6.1" }
    panic-halt = "1.0.0"

[lib]
    name = "mpu60x0"
    path = "src/lib.rs"

[profile.dev]
    panic = "abort"

[profile.release]
    panic = "abort"

[[example]]
    name = "small-example"